# Examples

./: .gitignore
Bash/: Timer.sh
CMake/CompilerFlags/: CMakeLists.txt  CompilerFlags.cxx
CMake/Install/: CMakeLists.txt
CMake/SetTargetProperties/: CMakeLists.txt
CMake/VariableCaching/: CMakeLists.txt
CMake/Variables/: CMakeLists.txt
CTest/Coverage/: CMakeLists.txt  coverage.cpp
Doxygen/: readme.txt
ImageMagick/: OverlayImages.sh
Java/: helloworld.java
Other/: screen.cpp
Perl/: Output.pl
Plastimatch/: bspline.txt  translation.txt
Python/: Args.py  Arithmetic.py  Array.py  Basename.py  BigMatrix.py  Commands.py  CountFiles.py  ForEachLoop.py  ForLoop.py  Function.py  GlobDemo.py  If.py  JoinPaths.py  Math.py  Matrix.py  Numpy.py  Options.py  (+16 more)
c++/Boost/: CMakeLists.txt
c++/Boost/Accumulator/: Density.cpp  Legacy.cpp  MeanAndSecondMoment.cpp
c++/Boost/Any/: Any.cpp  CMakeLists.txt
c++/Boost/Bimap/: Bimap.cpp  CMakeLists.txt
c++/Boost/Concept/: CMakeLists.txt  ClassTemplate.cpp  ClassTemplateItself.cpp  Concept.cpp  Custom.cpp  legacy.cpp
c++/Boost/DateTime/: CMakeLists.txt
c++/Boost/FileSystem/: FileSystem.cpp
c++/Boost/Function/: CMakeLists.txt  FreeFunction.cpp  FunctionTemplate.cpp  FunctionTemplateAuto.cpp  Legacy.cpp  MemberFunction.cpp  MemberFunctionMultipleArguments.cpp
c++/Boost/Functor/: CMakeLists.txt  Functor.cpp  NoArguments.cpp  legacy.cpp  simple.cpp
c++/Boost/Fusion/: CMakeLists.txt  Fusion.cpp
c++/Boost/Geometry/DistanceBetweenPoints/: CMakeLists.txt  DistanceBetweenPoints.cpp
c++/Boost/Geometry/PointInPolygon/: CMakeLists.txt  PointInPolygon.cpp
c++/Boost/Geometry/Simplification/: Simplification.cpp
c++/Boost/Iterator/: CMakeLists.txt  IndirectIterator.cpp  IndirectIteratorSmartPointer.cpp  IndirectIteratorSmartPointerSorting.cpp  Iterator.cpp
c++/Boost/LexicalCast/: CMakeLists.txt  LexicalCast.cpp  StringToValue.cxx  ValueToString.cxx
c++/Boost/MutableQueue/: CMakeLists.txt  MutableQueue.cpp
c++/Boost/NamedParameters/: CMakeLists.txt
c++/Boost/Numeric/Matrix/: CMakeLists.txt
c++/Boost/Numeric/MultiArray/: MultiArray.cpp
c++/Boost/Numeric/Vector/: Vector.cpp
c++/Boost/ProgramOptions/MultipleLists/: CMakeLists.txt  MultipleLists.cpp
c++/Boost/ProgramOptions/Simple/: BoostProgramOptions.cpp  CMakeLists.txt
c++/Boost/Progress/: BoostProgress.cpp  CMakeLists.txt
c++/Boost/PropertyMap/Associative/: CMakeLists.txt
c++/Boost/PropertyMap/Dynamic/: CMakeLists.txt  DynamicProperty.cpp
c++/Boost/PropertyMap/Iterator/: CMakeLists.txt  IteratorPropertyMap.cpp
c++/Boost/PropertyMap/Vector/: CMakeLists.txt  VectorPropertyMap.cpp
c++/Boost/Random/: CMakeLists.txt  ReadMe.txt
c++/Boost/Random/IntegersInARange/: CMakeLists.txt  IntegersInARange.cxx
c++/Boost/Random/IntegersInARangeWithWeightedProbability/: CMakeLists.txt  IntegersInARangeWithWeightedProbability.cxx
c++/Boost/Random/NormalDistribution/: NormalDistribution.cxx
c++/Boost/Regex/: CMakeLists.txt  Regex.cpp  legacy.cpp  working.cpp
c++/Boost/Signal/Basic/: CMakeLists.txt
c++/Boost/Signal/Class/: CMakeLists.txt
c++/Boost/Signal/ClassMember/: CMakeLists.txt  ClassMember.cpp
c++/Boost/Signal/ClassMemberWithParameters/: CMakeLists.txt  ClassMemberWithParameters.cpp
c++/Boost/Signal/ClassMemberWithParametersImplementationFile/: CMakeLists.txt  Form.cpp
c++/Boost/Signals2/ClassMemberWithParameters/: CMakeLists.txt  ClassMemberWithParameters.cpp
c++/Boost/Signals2/ClassMemberWithParametersImplementationFile/: CMakeLists.txt  ClassMemberWithParametersImplementationFile.cpp
c++/Boost/Signals2/Parameters/: Parameters.cpp
c++/Boost/Spirit/: CMakeLists.txt  Complex.cpp  LongList.cpp  Simple.cpp  Spirit.cpp  Test1.cpp  phoenix.cpp  skipper.cpp
c++/Boost/Testing/: CMakeLists.txt  Testing.cpp  legacy.cpp
c++/Boost/Threads/Thread/: BoostThreads.cpp
c++/Boost/Threads/ThreadCommunication/: CMakeLists.txt
c++/Boost/Timer/: BoostTimer.cpp  CMakeLists.txt  Doxyfile
c++/Boost/Tuple/: CMakeLists.txt  Tuple.cpp
c++/Boost/Variant/: CMakeLists.txt  Variant.cpp
c++/Boost/enable_if/: CMakeLists.txt  enable_if.cpp
c++/Boost/ptr_vector/: CMakeLists.txt  ptr_vector.cpp
c++/Boost/ref/: CMakeLists.txt  ref.cpp
c++/Boost/shared_ptr/: CMakeLists.txt  shared_ptr.cpp
c++/Demos/: CMakeLists.txt  demo_vtk_Delaunay3D.cpp  demo_vtk_PerlinTerrain.cpp  demo_vtk_assembly.cpp  demo_vtk_band_contour_terrain.cpp  demo_vtk_color_iso_surf.cpp  demo_vtk_constrainedDelaunay.cpp  demo_vtk_cut_combustor.cpp  demo_vtk_delMesh.cpp  demo_vtk_image_wrap.cpp  demo_vtk_medical_vol16_2.cpp  demo_vtk_medical_vol16_3.cpp  demo_vtk_procrustesAlignment.cpp  demo_vtk_rainbow.cpp  demo_vtk_render_large_image.cpp  demo_vtk_streamline.cpp  demo_vtk_subsample_grid.cpp  demo_vtk_wrap_comb.cpp  project_config.h  test.cpp  vtk_minimal.cpp
c++/Eigen/ConvertToOpenCV/: CMakeLists.txt  ConvertToOpenCV.cpp
c++/Eigen/FindingEigen3WithCMake/: CMakeLists.txt  CMakeLists.txt.works
c++/Eigen/LevenbergMarquardt/: AnalyticDerivative.cpp  CMakeLists.txt  CurveFitting.cpp  NumericalDerivative.cpp
c++/Eigen/SparseMatrixSolver/: CMakeLists.txt  SparseMatrixSolver.cpp
c++/FFTWTest/: CMakeLists.txt  FindFFTW.cmake
c++/GTest/: CMakeLists.txt  GTest.cpp  GTestWithMain.cpp
c++/Octave/: CMakeLists.txt  ProbNumeric.m
c++/OpenCV/ConvertPointsHomogeneous/: CMakeLists.txt  ConvertPointsHomogeneous.cxx  working.cxx
c++/OpenCV/ConvertToEigen/: CMakeLists.txt  ConvertToEigen.cxx
c++/OpenCV/DecomposeProjectionMatrix/: CMakeLists.txt  DecomposeProjectionMatrix.cxx
c++/OpenCV/RectifyPair/: CMakeLists.txt  RectifyPair.cxx  old.cxx
c++/OpenCV/SolvePNP/: CMakeLists.txt  SolvePNP.cxx
c++/OpenGL/Buffers/: CMakeLists.txt  OpenGLBuffers.cpp
c++/OpenGL/ErrorChecking/: CMakeLists.txt  ErrorChecking.cpp
c++/OpenGL/Menu/: CMakeLists.txt
c++/OpenGL/NoWindow/: CMakeLists.txt  Doxyfile
c++/OpenGL/Pick/: CMakeLists.txt  Display.cpp  Doxyfile  MouseClass.h  OpenGLinit.cpp  Other.cpp  Vector.cpp
c++/UnitTest++Find/: CMakeLists.txt  FindUnitTest++.cmake  SingleTest.cpp  Suite.cpp
(+6423 files in other folders)
