cmake_minimum_required(VERSION 2.6)

Project(BoostExamples)

add_subdirectory(Accumulator)
add_subdirectory(Bimap)
add_subdirectory(DateTime)
#add_subdirectory(FileSystem)
add_subdirectory(Function)
add_subdirectory(Functor)
add_subdirectory(Geometry/DistanceBetweenPoints)
add_subdirectory(Geometry/PointInPolygon)
add_subdirectory(Geometry/Simplification)
add_subdirectory(Graph/AdjacencyList)
add_subdirectory(Graph/AdjacentVertices)
add_subdirectory(Graph/BetweennessCentralityClustering)
add_subdirectory(Graph/BFS/CustomVisitor)
add_subdirectory(Graph/BFS/MakeBFSVisitor)
add_subdirectory(Graph/BundledProperties)
add_subdirectory(Graph/BundledPropertySet)
add_subdirectory(Graph/CopyGraph)
add_subdirectory(Graph/CreateGraph)
add_subdirectory(Graph/DFS)
add_subdirectory(Graph/DijkstraComputePath)
add_subdirectory(Graph/DijkstraDirected)
add_subdirectory(Graph/DijkstraUndirected)
add_subdirectory(Graph/Directed/IterateEdges)
add_subdirectory(Graph/Directed/IterateVertices)
add_subdirectory(Graph/Directed/Simple)
add_subdirectory(Graph/Directed/Weighted)
add_subdirectory(Graph/EdgeDescriptor)
add_subdirectory(Graph/EdgeExists)

add_subdirectory(Graph/HamiltonianCircuit)
add_subdirectory(Graph/InvisibleEdges)
add_subdirectory(Graph/MaxFlow)
add_subdirectory(Graph/NumberOfNeighbors)
add_subdirectory(Graph/NumberOfVertices)
add_subdirectory(Graph/ReadGraph)
add_subdirectory(Graph/RelabelInputVertices)
add_subdirectory(Graph/SetAllWeights)
add_subdirectory(Graph/SubGraph)
add_subdirectory(Graph/TravelingSalesman)
add_subdirectory(Graph/VertexIds)
add_subdirectory(Graph/VertexNames)
add_subdirectory(Graph/VertexProperties)
add_subdirectory(Graph/WriteGraph)
add_subdirectory(Histogram)
add_subdirectory(LexicalCast)
add_subdirectory(NamedParameters)
add_subdirectory(Numeric/Matrix)
add_subdirectory(Numeric/MultiArray)
add_subdirectory(Numeric/SparseMatrix)
add_subdirectory(Numeric/Vector)
add_subdirectory(ProgramOptions/MultipleArguments)
add_subdirectory(ProgramOptions/MultipleLists)
add_subdirectory(ProgramOptions/Simple)
add_subdirectory(Progress)
add_subdirectory(Signal/Basic)
add_subdirectory(Signal/Class)
add_subdirectory(Signal/ClassMember)
add_subdirectory(Signal/ClassMemberWithParameters)
add_subdirectory(Signal/ClassMemberWithParametersImplementationFile)
add_subdirectory(Signal/SignalsWithQt)
add_subdirectory(Signals2/Basic)
add_subdirectory(Signals2/ClassMemberWithParameters)
add_subdirectory(Signals2/ClassMemberWithParametersImplementationFile)
add_subdirectory(Signals2/MultipleParameters)
add_subdirectory(Signals2/Parameters)
add_subdirectory(Testing)
add_subdirectory(Threads/Thread)
add_subdirectory(Threads/ThreadCommunication)
add_subdirectory(Threads/ThreadMember)
add_subdirectory(Timer)
add_subdirectory(Variant)
