cmake_minimum_required(VERSION 2.6)

Project(Function)

ADD_EXECUTABLE(MemberFunction MemberFunction.cpp)

ADD_EXECUTABLE(FreeFunction FreeFunction.cpp)

ADD_EXECUTABLE(MemberFunctionMultipleArguments MemberFunctionMultipleArguments.cpp)

ADD_EXECUTABLE(FunctionTemplate FunctionTemplate.cpp)
# 
# ADD_EXECUTABLE(FunctionTemplateAuto FunctionTemplateAuto.cpp)
